[project]
name = "dtsc330-26"
version = "0.1.0"
description = ""
authors = [
    {name = "Zeke Sams",email = "ezekielvsams@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
