[project]
name = "dtsc330-26"
version = "0.1.0"
description = ""
authors = [
    {name = "Zeke Sams",email = "ezekielvsams@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "fasttext (>=0.9.3,<0.10.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "jarowinkler (>=2.0.1,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
